@@ -240,6 +240,10 @@
       \item \code{topenv(baseenv())} returns \code{baseenv()} again as
       in \R 3.1.0 and earlier.  This also fixes \code{compilerJIT(3)}
       when used in \file{.Rprofile}.
+
+      \item \code{detach()}ing the \pkg{methods} package keeps
+      \code{.isMethodsDispatchOn()} true, as long as the methods
+      namespace is not unloaded.% This keeps a sane state, see the regr-S4 test
     }
   }
 }
